# vcon-fadapter

./: .gitignore  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INGRESS_LISTS_EXAMPLE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  vcon-server.code-workspace
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
fax_adapter/: __init__.py  builder.py  config.py  monitor.py  parser.py  poster.py  s3_monitor.py  tracker.py
tests/: __init__.py  conftest.py  test_builder.py  test_config.py  test_main.py  test_monitor.py  test_parser.py  test_poster.py  test_s3_config.py  test_s3_integration.py  test_s3_monitor.py  test_tracker.py
