[project]
name = "vcon-fadapter"
version = "0.1.0"
description = "A file system monitoring adapter that watches for fax images and creates vCon objects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vcon>=0.1.0",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

